--- a/source/index.html
+++ b/source/index.html
@@ -30,9 +30,7 @@
     </nav>
   </header>
   <main class="page__main">
-    <span class="visually-hidden">
-      <h1>Cat Energy - функциональное питание для котов</h1>
-    </span>
+      <h1 class="main-header visually-hidden">Cat Energy - функциональное питание для котов</h1>
     <section class="product-info">
       <h2 class="product-info__header section-header">Функциональное питание для котов</h2>
       <p class="product-info__slogan">занялся собой? займись котом!</p>
@@ -92,7 +90,7 @@
       </fieldset>
       <p class="example__finance">Затраты на питание: 15 000 РУБ.</p>
       <div class="example__slider">
-        <img class="slider__cat-image" src="">
+        <img class="slider__cat-image" src="" alt="Фото кота">
         <span class="slider__text">Было</span>
         <button class="slider__button" type="button"></button>
         <span class="slider__text">Стало</span>
@@ -108,6 +106,7 @@
       <img class="contacts__map" src="" alt="карта проезда">
     </section>
     <section class="footer-media">
+      <h2 class="visually hidden">Медиа и социальные сети</h2>
       <a class="footer-media__cat-logo" href=""><b>CAT</b> ENERGY</a>
       <ul class="social">
         <li class="social__item">
