Появляется стили для индекса

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Кэт энерджи</title>
-  <!--<link rel="stylesheet" href="styles/styles.css">
-  <link rel="icon" href="favicon.ico">-->
+  <link rel="stylesheet" href="css/style.css">
+  <!--<link rel="icon" href="favicon.ico">-->
 </head>
 
 <body class="page__body">
@@ -24,10 +24,10 @@
           <a class="main-nav__link" href="">каталог продукции</a>
         </li>
         <li class="main-nav__item">
-          <a class="main-nav__link main-nav__link--active" href="">подбор программы</a>
+          <a class="main-nav__link main-nav__link--active" href="form.html">подбор программы</a>
         </li>
       </ul>
-    </nav>
+      </nav>
   </header>
 
   <main class="page__main">
@@ -35,254 +35,253 @@
     <section class="shop">
       <h2 class="visually-hidden">Перечень основных товаров</h2>
       <ul class="shop__list">
-        <li class="shop__card">
-          <img class="shop__photo" src="" alt="изображение товара">
-          <h3 class="shop__title">Cat Energy PRO 500 г</h3>
-          <div class="product">
-            <ul class="product__details">
-              <li class="product__properties">
-                <p class="product__category">Масса</p>
+        <li class="shop__card card">
+          <a class="card__link" href=""><img class="card__photo" src="" alt="изображение товара"></a>
+          <a class="card__link" href=""></a><h3 class="card__title">Cat Energy PRO 500 г</h3></a>
+          <div class="card__product">
+            <ul class="card__details">
+              <li class="card__properties">
+                <p class="card__category">Масса</p>
               </li>
-              <li class="product__properties">
-                <p class="product__category">Вкус</p>
+              <li class="card__properties">
+                <p class="card__category">Вкус</p>
               </li>
-              <li class="product__properties">
-                <p class="product__category">Цена</p>
+              <li class="card__properties">
+                <p class="card__category">Цена</p>
               </li>
             </ul>
-            <ul class="product__values">
-              <li class="product__properties">
-                <p class="product__measure">500 г</p>
+            <ul class="card__values">
+              <li class="card__properties">
+                <p class="card__measure">500 г</p>
               </li>
-              <li class="product__properties">
-                <p class="product__measure">Курица</p>
+              <li class="card__properties">
+                <p class="card__measure">Курица</p>
               </li>
-              <li class="product__properties">
-                <p class="product__measure">700 Р.</p>
+              <li class="card__properties">
+                <p class="card__measure">700 Р.</p>
               </li>
             </ul>
           </div>
-          <button class="shop__order" type="button">Заказать</button>
+          <a class="shop__order order-button" href="">Заказать</a>
         </li>
-        <li class="shop__card">
-          <img class="shop__photo" src="" alt="изображение товара">
-          <h3 class="shop__title">Cat Energy PRO 1000 г</h3>
-          <div class="product">
-            <ul class="product__details">
-              <li class="product__properties">
-                <p class="product__category">Масса</p>
+        <li class="shop__card card">
+          <a class="card__link" href=""><img class="card__photo" src="" alt="изображение товара"></a>
+          <a class="card__link" href=""></a><h3 class="card__title">Cat Energy PRO 1000 г</h3></a>
+          <div class="card__product">
+            <ul class="card__details">
+              <li class="card__properties">
+                <p class="card__category">Масса</p>
               </li>
-              <li class="product__properties">
-                <p class="product__category">Вкус</p>
+              <li class="card__properties">
+                <p class="card__category">Вкус</p>
               </li>
-              <li class="product__properties">
-                <p class="product__category">Цена</p>
+              <li class="card__properties">
+                <p class="card__category">Цена</p>
               </li>
             </ul>
-            <ul class="product__values">
-              <li class="product__properties">
-                <p class="product__measure">1000 г</p>
+            <ul class="card__values">
+              <li class="card__properties">
+                <p class="card__measure">1000 г</p>
               </li>
-              <li class="product__properties">
-                <p class="product__measure">Курица</p>
+              <li class="card__properties">
+                <p class="card__measure">Курица</p>
               </li>
-              <li class="product__properties">
-                <p class="product__measure">1000 Р.</p>
+              <li class="card__properties">
+                <p class="card__measure">1000 Р.</p>
               </li>
             </ul>
           </div>
-          <button class="shop__order" type="button">Заказать</button>
+          <a class="shop__order order-button" href="">Заказать</a>
         </li>
-        <li class="shop__card">
-          <img class="shop__photo" src="" alt="изображение товара">
-          <h3 class="shop__title">Cat Energy PRO 500 г</h3>
-          <div class="product">
-            <ul class="product__details">
-              <li class="product__properties">
-                <p class="product__category">Масса</p>
+        <li class="shop__card card">
+          <a class="card__link" href=""><img class="card__photo" src="" alt="изображение товара"></a>
+          <a class="card__link" href=""></a><h3 class="card__title">Cat Energy PRO 500 г</h3></a>
+          <div class="card__product">
+            <ul class="card__details">
+              <li class="card__properties">
+                <p class="card__category">Масса</p>
               </li>
-              <li class="product__properties">
-                <p class="product__category">Вкус</p>
+              <li class="card__properties">
+                <p class="card__category">Вкус</p>
               </li>
-              <li class="product__properties">
-                <p class="product__category">Цена</p>
+              <li class="card__properties">
+                <p class="card__category">Цена</p>
               </li>
             </ul>
-            <ul class="product__values">
-              <li class="product__properties">
-                <p class="product__measure">500 г</p>
+            <ul class="card__values">
+              <li class="card__properties">
+                <p class="card__measure">500 г</p>
               </li>
-              <li class="product__properties">
-                <p class="product__measure">Рыба</p>
+              <li class="card__properties">
+                <p class="card__measure">Рыба</p>
               </li>
-              <li class="product__properties">
-                <p class="product__measure">700 Р.</p>
+              <li class="card__properties">
+                <p class="card__measure">700 Р.</p>
               </li>
             </ul>
           </div>
-          <button class="shop__order" type="button">Заказать</button>
+          <a class="shop__order order-button" href="">Заказать</a>
         </li>
-        <li class="shop__card">
-          <img class="shop__photo" src="" alt="изображение товара">
-          <h3 class="shop__title">Cat Energy PRO 1000 г</h3>
-          <div class="product">
-            <ul class="product__details">
-              <li class="product__properties">
-                <p class="product__category">Масса</p>
+        <li class="shop__card card">
+          <a class="card__link" href=""><img class="card__photo" src="" alt="изображение товара"></a>
+          <a class="card__link" href=""></a><h3 class="card__title">Cat Energy PRO 1000 г</h3></a>
+          <div class="card__product">
+            <ul class="card__details">
+              <li class="card__properties">
+                <p class="card__category">Масса</p>
               </li>
-              <li class="product__properties">
-                <p class="product__category">Вкус</p>
+              <li class="card__properties">
+                <p class="card__category">Вкус</p>
               </li>
-              <li class="product__properties">
-                <p class="product__category">Цена</p>
+              <li class="card__properties">
+                <p class="card__category">Цена</p>
               </li>
             </ul>
-            <ul class="product__values">
-              <li class="product__properties">
-                <p class="product__measure">1000 г</p>
+            <ul class="card__values">
+              <li class="card__properties">
+                <p class="card__measure">1000 г</p>
               </li>
-              <li class="product__properties">
-                <p class="product__measure">Рыба</p>
+              <li class="card__properties">
+                <p class="card__measure">Рыба</p>
               </li>
-              <li class="product__properties">
-                <p class="product__measure">1000 Р.</p>
+              <li class="card__properties">
+                <p class="card__measure">1000 Р.</p>
               </li>
             </ul>
           </div>
-          <button class="shop__order" type="button">Заказать</button>
+          <a class="shop__order order-button" href="">Заказать</a>
         </li>
-        <li class="shop__card">
-          <img class="shop__photo" src="" alt="изображение товара">
-          <h3 class="shop__title">Cat Energy SLIM 500 г</h3>
-          <div class="product">
-            <ul class="product__details">
-              <li class="product__properties">
-                <p class="product__category">Масса</p>
+        <li class="shop__card card">
+          <a class="card__link" href=""><img class="card__photo" src="" alt="изображение товара"></a>
+          <a class="card__link" href=""></a><h3 class="card__title">Cat Energy SLIM 500 г</h3></a>
+          <div class="card__product">
+            <ul class="card__details">
+              <li class="card__properties">
+                <p class="card__category">Масса</p>
               </li>
-              <li class="product__properties">
-                <p class="product__category">Вкус</p>
+              <li class="card__properties">
+                <p class="card__category">Вкус</p>
               </li>
-              <li class="product__properties">
-                <p class="product__category">Цена</p>
+              <li class="card__properties">
+                <p class="card__category">Цена</p>
               </li>
             </ul>
-            <ul class="product__values">
-              <li class="product__properties">
-                <p class="product__measure">500 г</p>
+            <ul class="card__values">
+              <li class="card__properties">
+                <p class="card__measure">500 г</p>
               </li>
-              <li class="product__properties">
-                <p class="product__measure">Гречка</p>
+              <li class="card__properties">
+                <p class="card__measure">Гречка</p>
               </li>
-              <li class="product__properties">
-                <p class="product__measure">400 Р.</p>
+              <li class="card__properties">
+                <p class="card__measure">400 Р.</p>
               </li>
             </ul>
           </div>
-          <button class="shop__order" type="button">Заказать</button>
+          <a class="shop__order order-button" href="">Заказать</a>
         </li>
-        <li class="shop__card">
-          <img class="shop__photo" src="" alt="изображение товара">
-          <h3 class="shop__title">Cat Energy SLIM 1000 г</h3>
-          <div class="product">
-            <ul class="product__details">
-              <li class="product__properties">
-                <p class="product__category">Масса</p>
+        <li class="shop__card card">
+          <a class="card__link" href=""><img class="card__photo" src="" alt="изображение товара"></a>
+          <a class="card__link" href=""></a><h3 class="card__title">Cat Energy SLIM 1000 г</h3></a>
+          <div class="card__product">
+            <ul class="card__details">
+              <li class="card__properties">
+                <p class="card__category">Масса</p>
               </li>
-              <li class="product__properties">
-                <p class="product__category">Вкус</p>
+              <li class="card__properties">
+                <p class="card__category">Вкус</p>
               </li>
-              <li class="product__properties">
-                <p class="product__category">Цена</p>
+              <li class="card__properties">
+                <p class="card__category">Цена</p>
               </li>
             </ul>
-            <ul class="product__values">
-              <li class="product__properties">
-                <p class="product__measure">1000 г</p>
+            <ul class="card__values">
+              <li class="card__properties">
+                <p class="card__measure">1000 г</p>
               </li>
-              <li class="product__properties">
-                <p class="product__measure">Гречка</p>
+              <li class="card__properties">
+                <p class="card__measure">Гречка</p>
               </li>
-              <li class="product__properties">
-                <p class="product__measure">700 Р.</p>
+              <li class="card__properties">
+                <p class="card__measure">700 Р.</p>
               </li>
             </ul>
           </div>
-          <button class="shop__order" type="button">Заказать</button>
+          <a class="shop__order order-button" href="">Заказать</a>
         </li>
-        <li class="shop__card">
-          <img class="shop__photo" src="" alt="изображение товара">
-          <h3 class="shop__title">Cat Energy SLIM 500 г</h3>
-          <div class="product">
-            <ul class="product__details">
-              <li class="product__properties">
-                <p class="product__category">Масса</p>
+        <li class="shop__card card">
+          <a class="card__link" href=""><img class="card__photo" src="" alt="изображение товара"></a>
+          <a class="card__link" href=""></a><h3 class="card__title">Cat Energy SLIM 500 г</h3></a>
+          <div class="card__product">
+            <ul class="card__details">
+              <li class="card__properties">
+                <p class="card__category">Масса</p>
               </li>
-              <li class="product__properties">
-                <p class="product__category">Вкус</p>
+              <li class="card__properties">
+                <p class="card__category">Вкус</p>
               </li>
-              <li class="product__properties">
-                <p class="product__category">Цена</p>
+              <li class="card__properties">
+                <p class="card__category">Цена</p>
               </li>
             </ul>
-            <ul class="product__values">
-              <li class="product__properties">
-                <p class="product__measure">500 г</p>
+            <ul class="card__values">
+              <li class="card__properties">
+                <p class="card__measure">500 г</p>
               </li>
-              <li class="product__properties">
-                <p class="product__measure">Рис</p>
+              <li class="card__properties">
+                <p class="card__measure">Рис</p>
               </li>
-              <li class="product__properties">
-                <p class="product__measure">500 Р.</p>
+              <li class="card__properties">
+                <p class="card__measure">500 Р.</p>
               </li>
             </ul>
           </div>
-          <button class="shop__order" type="button">Заказать</button>
+          <a class="shop__order order-button" href="">Заказать</a>
         </li>
       </ul>
       <p class="shop__full-view">Показать еще 100500 товаров</p>
       <p class="shop__description">На самом деле вкусов гораздо больше!</p>
-      <button class="shop__show-more" type="button">показать все</button>
+      <a class="shop__show-more" href="">показать все</a>
     </section>
     <section class="additions">
       <h2 class="additions__title">Дополнительные товары</h2>
       <ul class="additions__list">
         <li class="additions__item">
-          <p>Сахарозаменитель</p>
+          <p class="additions__label">Сахарозаменитель</p>
           <div class="additions__properties">
             <p class="additions__category">1 упаковка (100 г)</p>
             <p class="additions__measure">200 Р.</p>
           </div>
-          <button class="additions__order" type="button">заказать</button>
+          <a class="additions__order order-button" href="">заказать</a>
         </li>
         <li class="additions__item">
-          <p>питьевая вода</p>
+          <p class="additions__label">питьевая вода</p>
           <div class="additions__properties">
             <p class="additions__category">5 литров</p>
             <p class="additions__measure">50 Р.</p>
           </div>
-          <button class="additions__order" type="button">заказать</button>
+          <a class="additions__order order-button" href="">заказать</a>
         </li>
         <li class="additions__item">
-          <p>молоко</p>
+          <p class="additions__label">молоко</p>
           <div class="additions__properties">
             <p class="additions__category">1 литр</p>
             <p class="additions__measure">100 Р.</p>
           </div>
-          <button class="additions__order" type="button">заказать</button>
+          <a class="additions__order order-button" href="">заказать</a>
         </li>
         <li class="additions__item">
-          <p>витамины</p>
+          <p class="additions__label">витамины</p>
           <div class="additions__properties">
             <p class="additions__category">1 упаковка (30 г)</p>
             <p class="additions__measure">300 Р.</p>
           </div>
-          <button class="additions__order" type="button">заказать</button>
+          <a class="additions__order order-button" href="">заказать</a>
         </li>
       </ul>
     </section>
     <p class="promo">Закажите все и получите чехол для кота в подарок!</p>
   </main>
-
   <footer class="page__footer">
     <section class="footer-contacts">
       <h2 class="visually hidden">Контакты</h2>
