--- a/source/form.html
+++ b/source/form.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="utf-8">
   <title>Кэт энерджи</title>
-  <!--<link rel="stylesheet" href="styles/styles.css">
-  <link rel="icon" href="favicon.ico">-->
+  <link rel="stylesheet" href="css/style.css">
+  <!--<link rel="icon" href="favicon.ico">-->
 </head>
 
 <body class="page__body">
@@ -21,7 +21,7 @@
           <a class="main-nav__link" href="index.html">главная</a>
         </li>
         <li class="main-nav__item">
-          <a class="main-nav__link" href="">каталог продукции</a>
+          <a class="main-nav__link" href="catalog.html">каталог продукции</a>
         </li>
         <li class="main-nav__item">
           <a class="main-nav__link main-nav__link--active" href="">подбор программы</a>
@@ -51,15 +51,15 @@
         </ul>
         <ul class="data-form__list">
           <li class="data-form__item">
-            <input class="data-form__radio" type="radio" name="loss" value="loss" checked>
+            <input class="data-form__radio" type="radio" name="weight-change" value="loss" checked>
             <span class="data-form__label">Похудение</span>
           </li>
           <li class="data-form__item">
-            <input class="data-form__radio" type="radio" name="gain" value="gain">
+            <input class="data-form__radio" type="radio" name="weight-change" value="gain">
             <span class="data-form__label">Набор массы</span>
           </li>
           <li class="data-form__item">
-            <input class="data-form__radio" type="radio" name="unknown" value="unknown">
+            <input class="data-form__radio" type="radio" name="weight-change" value="unknown">
             <span class="data-form__label">Не знаю (нужен ваш совет)</span>
           </li>
         </ul>
@@ -71,7 +71,7 @@
           </li>
           <li class="data-form__item">
             <label class="data-form__label" for="phone">Телефон:*</label>
-            <input class="data-form__input" type="phone" name="phone" id="phone" placeholder="8 (960) 900-60-90">
+            <input class="data-form__input" type="tel" name="phone" id="phone" placeholder="8 (960) 900-60-90">
           </li>
         </ul>
         <h3 class="data-form__title">Комментарий</h3>
@@ -79,6 +79,7 @@
           <input class="data-form__comment-field" type="text" name="comment"
             placeholder="Расскажите обо всех повадках кота">
         </div>
+        <h3 class="data-form__title">Дополнительно</h3>
         <ul class="data-form__list">
           <li class="data-form__item">
             <input class="data-form__input" type="checkbox" name="sugar" checked>
